@@ -111,7 +111,6 @@
 #ifdef PP_AUTO_AMPACITY
 #define STATE_TRANSITION_REQ_FUNC
 #define PP_TABLE_IEC
-//#define PP_TABLE_TESLA
 
 #include "AutoCurrentCapacityController.h"
 #endif
