@@ -1,5 +1,8 @@
 Change Log
 
+20180404 SCL
+- get rid of deprecated/superfluous PP_TABLE_TESLA
+	
 D4.13.0 20180403 SCL
 - revert change from D4.12.0: delay timer would always wait for EV finish charging before ending.
   -> timer will go to sleep at end of specified time window unless charge or time limit set -> charge or time limit will still override timer end.
